--- a/el_steamdb.ipynb
+++ b/el_steamdb.ipynb
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cria o dataframe e insere os dados da lista 'tratado', após isso salva o dataframe em um CSV (steam_sales_data.csv) na pasta do projeto. Ao final, é possivel visualisar a amostra do respectivo dataframe."
+    "## Cria o dataframe e trata as colunas (Discount_Percentage e Rating), retirando a porcentagem e divindo por 100. Após isso, salva o dataframe em um CSV (steam_sales_data.csv) na pasta do projeto. Ao final, é possivel visualisar a amostra do respectivo dataframe."
    ]
   },
   {
